--- a/p1.html
+++ b/p1.html
@@ -11,6 +11,10 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -53,6 +57,10 @@
 
       <p>
         This is drawing I made using shape primitives with p5.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       <!-- 4. reflection -->
@@ -62,6 +70,10 @@
 
       <p>
        I started with the 2D grid system, and then make the same design with p5 by using only rectangle. 
+
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       <div class="fullwidth">
@@ -78,6 +90,10 @@
         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       <!-- 4. reflection -->
@@ -87,6 +103,10 @@
 
       <p>
         For me, the most hardest part of this coding process was put everything into right position. My design is consists of different sizes of rectangles and these shapes are all connected into edges, so it took me a so lone time to figure out right position. After writing code for this design, I learned that the hierchy is really importatnt and affects a lot on the entire design.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       <!-- 5. reflection -->
