--- a/p2.html
+++ b/p2.html
@@ -35,6 +35,8 @@
       <p>
         Coming soon
       </p>
-    </div>
+    <div>
+      <iframe style="width:400px;height:400px;" src="https://editor.p5js.org/sjoo23/full/LEb3rEZJt"></iframe>
+
   </body>
 </html>
