--- a/p2.html
+++ b/p2.html
@@ -32,11 +32,34 @@
 
     <!-- main content -->
     <div class="content">
-      <p>
-        Coming soon
-      </p>
-    <div>
-      <iframe style="width:400px;height:400px;" src="https://editor.p5js.org/sjoo23/full/LEb3rEZJt"></iframe>
 
+      <h1>
+        Project #2 Lost and Found
+      </h1>
+      <p>
+       <iframe style="width:400px;height:400px;" src="https://editor.p5js.org/sjoo23/full/LEb3rEZJt"></iframe>
+      </p>
+
+      <h1>
+        My name: Subin Joo
+        My Partner's name: Sunny Lee
+      </h1>
+
+      <h1>
+        The Object Description I Received
+      </h1>
+
+      <p>
+        I lost my jewelry. It had two identical pieces in a set. It has round leaves around a gold circle, and within the circle, there was another white circle. The leaves were white as well. There was a ring attached to the back of the circle, which was also gold. It's crystalized.
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        reflection is...
+      </p>
+    </div>
   </body>
 </html>
