--- a/p2.html
+++ b/p2.html
@@ -51,6 +51,10 @@
 
       <p>
         I lost my jewelry. It had two identical pieces in a set. It has round leaves around a gold circle, and within the circle, there was another white circle. The leaves were white as well. There was a ring attached to the back of the circle, which was also gold. It's crystalized.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       <h1>
@@ -59,6 +63,10 @@
 
       <p>
         reflection is...
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
     </div>
   </body>
