--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     
 <!-- navigation menu -->
     <nav>
-      <h1>Subin Joo</h1>
+      <h1>
+      Subin Joo
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+      </h1>
+      
       <ul>
         <li>Project <a href="p1.html">#1</a></li>
         <li>Project <a href="p2.html">#2</a></li>
@@ -39,6 +46,10 @@
     <div class="content">
       <h1>
         Put something here
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
       </h1>
       <h2 class="special-h2">
         Some other stuff
