--- a/p2.html
+++ b/p2.html
@@ -46,7 +46,10 @@
 
       <h1>
         My name: Subin Joo
-        My Partner's name: Sunny Lee
+      </h1>
+
+      <h1>
+        Partner's name: Sunny Lee
       </h1>
 
       <h1>
