--- a/p2.html
+++ b/p2.html
@@ -41,6 +41,7 @@
         Project #2 Lost and Found
       </h1>
       <p>
+
        <iframe style="width:400px;height:400px;" src="https://editor.p5js.org/sjoo23/full/LEb3rEZJt"></iframe>
       </p>
 
@@ -69,7 +70,10 @@
       </h1>
 
       <p>
-        reflection is...
+        She used words like “jewelry”, “leaves”, and “crystalized” in between, in addition to words representing basic shapes and colors, to remind me of certain shapes or images based on my memories, experiences, and culture.
+        I got a little hint that it was a flower shape, and from then on, I focused on the fact that it was a flower, interpreted it, and made the shape I wanted.
+        It was too difficult to create the image in my head with coding even though I only used simple primitives. In particular, when I entered the rotation value of the shape, it took a long time because it did not go to the position I wanted. Also, she said it was crystallized in her description, but I was curious about how to depict this texture with coding, and I thought it would be the most difficult when I had to express an organic form in coding.
+        Just as I created my own image while reading her description, each human being has a different culture, experience, and different way of thinking, so unless you look at the exact picture, each person imagines the form they want, such as different shapes and colors, in their heads. Humans come up with various things when they see the input words, but since computers can't do that, I could see once again that only the information corresponding to the input value is shown by entering the correct value using a coding language that computers can understand.
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
