--- a/p3.html
+++ b/p3.html
@@ -32,9 +32,19 @@
 
     <!-- main content -->
     <div class="content">
+
+      <h1>
+        Project #3 Face Generator
+      </h1>
       <p>
-        Coming soon
+        <iframe style="width:400px;height:400px" src="https://editor.p5js.org/sjoo23/full/r6yw7XPlq"></iframe>
       </p>
+
+      <p>
+        <img src="IMG_design_sketches.jpg" alt="1stage and 2stage">
+      </p>
+
+      
     </div>
   </body>
 </html>
