--- a/p3.html
+++ b/p3.html
@@ -11,6 +11,10 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -38,10 +42,12 @@
       </h1>
       <p>
         <iframe style="width:400px;height:400px" src="https://editor.p5js.org/sjoo23/full/r6yw7XPlq"></iframe>
+
+
       </p>
 
       <p>
-        <img src="IMG_design_sketches.jpg" alt="1stage and 2stage">
+        <img src="IMG_design_sketches.jpg">
       </p>
 
       
