--- a/p3.html
+++ b/p3.html
@@ -46,8 +46,23 @@
 
       </p>
 
+      <h1>
+        Design Sketches
+      </h1>
+
       <p>
         <img src="IMG_design_sketches.jpg">
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
 
       
