--- a/p3.html
+++ b/p3.html
@@ -46,19 +46,26 @@
 
       </p>
 
-      <h1>
-        Design Sketches
-      </h1>
-
       <p>
-        <img src="IMG_design_sketches.jpg">
+       <img src="IMG_design_sketches.jpg"> 
       </p>
+        
+     
+
 
       <h1>
         Reflection
       </h1>
 
       <p>
+        During the design process, I first sketched the first and last steps of the face on paper, and made the steps in between using the coding language in p5.js.
+
+It was easy to draw a face using basic shapes, but after that, it didn’t easily go in the direction I wanted. My initial intention was to make the middle part of the face stretch upward only, but it was difficult to find a way to make it grow only to a certain range. Also, I wanted the ears to move along the movement line of the face, but this was also really difficult. In this way, I faced many obstacles until I came up with a design I was satisfied with.
+
+My favorite part is that I use "mousePressed" and "keyPressed" to make the mouth grow longer and longer when clicked, and to make the hair appear and disappear when I press the left and right arrow keys on the keyboard. 
+
+Through this assignment , I discovered that I could create artwork that users could interact with my designs.
+
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
