--- a/p3.html
+++ b/p3.html
@@ -46,6 +46,10 @@
 
       </p>
 
+      <h1>
+        Move your mouse! Click the mouse! Press the left and right arrow :)
+      </h1>
+
       <p>
        <img src="IMG_design_sketches.jpg"> 
       </p>
