--- a/p4.html
+++ b/p4.html
@@ -11,6 +11,10 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -32,8 +36,29 @@
 
     <!-- main content -->
     <div class="content">
+
+      <h1>
+        Project #4 Experimental Clock
+      </h1>
       <p>
-        Coming soon
+        <iframe style="width:600px;height:600px;" src="https://editor.p5js.org/sjoo23/full/oGS5j-vOl"></iframe>
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        Sometimes when I want to eat bananas, I buy it and often forget to eat it. Day after day passes like that, and at some point when I smelled a banana and looked at it, I could find a lot of brown spots on it. Then, I finally feel that a lot of time has passed and eat the bananas before they ripen more. So, based on my personal experience and memory, I realized that I can read time through a banana, and the banana tells me how much time has passed by its color and pattern. 
+        
+        In the design process, it was really difficult and complicated to make it change its appearance over time. From making the banana shape looks three-dimensional to making the brown spots appear, everything was difficult and took a lot of time, but using conditional statement and time, I was able to further develop my design and I learned how to set the starting and restarting point which helped me to solve the problems I had in the previous assignment. 
+        
+        Overall, it was really fun to design an unconventional clock that reminds me of my own memories and tells the story of my experience.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+
       </p>
     </div>
   </body>
