--- a/p5.html
+++ b/p5.html
@@ -11,6 +11,10 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -32,8 +36,67 @@
 
     <!-- main content -->
     <div class="content">
+
+      <h1>
+        Project #5 Exquisite Corpse
+      </h1>
       <p>
-        Coming soon
+        <iframe style="width:400px;height:600px;" src="https://editor.p5js.org/sjoo23/full/-oY7nHyYI"></iframe>
+      </p>
+
+      <h1>
+        Partner's Name: Selena & Nuo
+      </h1>
+
+      <h1>
+        Selena's Background Story: 
+      
+      </h1>
+
+      <p>
+        Ellie is from an alternate universe where everything is made of circles and ovals.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+      </p>
+
+      <h1>
+        Nuo's Background Story:
+      </h1>
+
+      <p>
+        OO is a type of aliens that live on the planet O16. They have donut-shaped heads and torsos to decrease body weight in order to accommodate the gravity on their planet. They have spaghetti-shaped arms, which are what they use for breathing and catching certain particles in the air to eat. Red is the most popular color on their planet, so they often wear red accessories. A year in their planet is only 10 days, so they celebrate their birthday every 10 days. That’s why you often see OOs wearing birthday hats. 
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+      </p>
+
+      <h1>
+        A New Background Story:
+      </h1>
+
+      <p>
+        Ellie traveled to a planet called 016. About a week after the trip, Ellie's torso transformed into a donut shape, and her arms transformed into strands of spaghetti. While exploring planet 016, Ellie found a jungle and met a monkey. She touched the monkey that approached her without any wariness, and now she is gradually changing into a monkey. 
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        In this assignment, I was able to learn how to use user-defined functions. I think this function is really helpful to organize different parts of drawings. Overall, it was really fun to create a new creature and background story based on the combination of three different characters with three different background stories.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+
+
       </p>
     </div>
   </body>
