--- a/p6.html
+++ b/p6.html
@@ -11,6 +11,10 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -32,8 +36,41 @@
 
     <!-- main content -->
     <div class="content">
+
+      <h1>
+        Project #6 Optical Illusion
+      </h1>
       <p>
-        Coming soon
+        <iframe style="width:600px;height:600px;" src="https://editor.p5js.org/sjoo23/full/q94OmkVM4"></iframe>
+      </p>
+
+      <p>
+        Click on the artwork to change it to a different color!
+      </p>
+
+
+      <h1>
+        Description
+      </h1>
+
+      <p>
+        How many colors do you see? Some people might say three, some people might say two, and some people might even say four. At first glance without looking closely, it may look like three or four colors were used, but in fact, only two colors were used. Take the first drawing, for example, the orange on the eyebrows and the mouth may look darker than the orange on the eyes, but the same orange color was used. In this way, it shows an optical illusion in which colors look different when there is white space between colors and when colors are attached without white space. 
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
       </p>
     </div>
   </body>
