--- a/p6.html
+++ b/p6.html
@@ -46,6 +46,10 @@
 
       <p>
         Click on the artwork to change it to a different color!
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
       </p>
 
 
