--- a/p8.html
+++ b/p8.html
@@ -15,25 +15,38 @@
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
-      <ul>
-        <li>Project <a href="p1.html">#1</a></li>
-        <li>Project <a href="p2.html">#2</a></li>
-        <li>Project <a href="p3.html">#3</a></li>
-        <li>Project <a href="p4.html">#4</a></li>
-        <li>Project <a href="p5.html">#5</a></li>
-        <li>Project <a href="p6.html">#6</a></li>
-        <li>Project <a href="p7.html">#7</a></li>
-        <li>Project <a href="p8.html">#8</a></li>
-        <li>Project <a href="p9.html">#9</a></li>
-      </ul>
-    </div>
+    <nav>
+      <a href="index.html"><h1>Subin Joo</h1></a>
+      </nav>
 
     <!-- main content -->
     <div class="content">
+      
+      <h1>
+        Project #8 Autobiographical Game
+        Choose Your Own Adventure!
+      </h1>
+
       <p>
-        Coming soon
+        <iframe style="width:500px;height:600px;" src="https://editor.p5js.org/sjoo23/full/nh1MSqjzz"></iframe>
+      </p>
+
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        I think our life is all about decision making. The direction of our lives changes depending on what decision we make, so it seems that we must always make our choices carefully. This project became an opportunity to revisit the choices I made in my life. I made this game because I was curious about what choices other people would make if the options I had to choose were placed in front of them. Users will be able to visit my life through this game.
+
+        At first, it was difficult to start and create all possible scenarios according to the options. But after figuring out the code, I was able to discover myself enjoying creating scenarios and designing the game while thinking and imagining about what path I would be taking if I made this choice at this time.
+
+        Next time I have a chance, I want to expand this game even further by adding more choices and more scenarios. Also, I want to make a lot of open endings to show that there is no wrong way no matter what choice you make, rather than a bad ending like "the end".
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
+
+
       </p>
     </div>
   </body>
