--- a/p9.html
+++ b/p9.html
@@ -27,10 +27,22 @@
     <div class="content">
 
       <h1>
-        Experimental Web Camera
+        Project #9 Experimental Web Camera
       </h1>
+
+     
+
+      <a href="https://readymag.com/u3282933523/4250674/"><h1>Website Link</h1></a>
+
+      <a href="https://app.milanote.com/1PV0JU1vt2bc7a?p=TEposSGiMfELinks to an external site."><h1>Milanote Link</h1></a>
+
+
       <p>
-        <iframe style="width:640px;height:480px;" src="https://editor.p5js.org/sjoo23/full/zc7cIoKI1"></iframe>
+        The camera doesn’t work here, so I put a website link and a Milanote link where you can check the P5.js sketch.
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet"> 
       </p>
     </div>
   </body>
