--- a/p7.html
+++ b/p7.html
@@ -29,6 +29,14 @@
       <h1>
         Project #7 Data Portrait
       </h1>
+
+      <p>
+        <iframe style="width:640px;height:580px;" src="https://editor.p5js.org/sjoo23/full/HKR1QNXIr"></iframe>
+
+      </p>
+
+  
+
     </div>
   </body>
 </html>
