--- a/p7.html
+++ b/p7.html
@@ -33,9 +33,25 @@
       <p>
         <iframe style="width:640px;height:580px;" src="https://editor.p5js.org/sjoo23/full/HKR1QNXIr"></iframe>
 
-       
+</p>
 
-      </p>
+<h1>
+  Reflection
+</h1>
+
+<p>
+  
+  I collected my data by recording the hold color and level of the problems I did on the day I went indoor bouldering gym. Each square color represents a hold color and the square's outline color represents a level. I portrait the climbing data using only squares and colors. 
+
+  Mauve = level 0
+  Blue = level 1
+  Green = level 2
+  Brown = level 3
+  Yellow = level 4
+  Red = level 5
+
+  
+</p>
 
   
 
